k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-monitor-backend
  labels:
    app: devops-monitor-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-monitor-backend
  template:
    metadata:
      labels:
        app: devops-monitor-backend
    spec:
      containers:
      - name: backend
        image: user/devops_monitor_backend:latest
        ports:
        - containerPort: 8000
