k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-monitor-frontend
  labels:
    app: devops-monitor-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-monitor-frontend
  template:
    metadata:
      labels:
        app: devops-monitor-frontend
    spec:
      containers:
      - name: frontend
        image: user/devops_monitor_frontend:latest
        ports:
        - containerPort: 3000
