k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-monitor-backend
spec:
  type: ClusterIP
  selector:
    app: devops-monitor-backend
  ports:
    - port: 8000
      targetPort: 8000
