k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-monitor-frontend
spec:
  type: ClusterIP
  selector:
    app: devops-monitor-frontend
  ports:
    - port: 3000
      targetPort: 3000
